<resources>
    <string name="app_name">Nanodegree</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="labelMyApps">My Nanodegree Apps!</string>
    <string name="spotifyStreamer">SPOTIFY STREAMER</string>
    <string name="scoresApp">SCORES APP</string>
    <string name="libraryApp">LIBRARY APP</string>
    <string name="buildItBigger">BUILD IT BIGGER</string>
    <string name="xyzReader">XYZ READER</string>
    <string name="capstone">CAPSTONE: MY OWN APP</string>
    <string name="title_artist_list">Artists</string>
    <string name="title_artist_detail">Artist Detail</string>
    <string name="no_tracks_found">No tracks found for artist.</string>
    <string name="no_artists_found">No artists found for: </string>
</resources>
