<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MyAppPortofolioActivity">

    <TextView android:id="@+id/lblMyApps"
        android:text="@string/labelMyApps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/labelTextSize"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/marginButtons"
        />

    <Button android:id="@+id/btnSpotifyStreamer"
        android:layout_width="@dimen/btnWidth"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lblMyApps"
        android:layout_centerHorizontal="true"
        android:text="@string/spotifyStreamer"
        android:background="@color/udacityOrange"
        android:layout_margin="@dimen/marginButtons"
        />
    <Button android:id="@+id/btnScoresApp"
        android:layout_width="@dimen/btnWidth"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnSpotifyStreamer"
        android:layout_centerHorizontal="true"
        android:text="@string/scoresApp"
        android:background="@color/udacityOrange"
        android:layout_margin="@dimen/marginButtons"
        />
    <Button android:id="@+id/btnLibraryApp"
        android:layout_width="@dimen/btnWidth"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnScoresApp"
        android:layout_centerHorizontal="true"
        android:text="@string/libraryApp"
        android:background="@color/udacityOrange"
        android:layout_margin="@dimen/marginButtons"
        />
    <Button android:id="@+id/btnBuildItBigger"
        android:layout_width="@dimen/btnWidth"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnLibraryApp"
        android:layout_centerHorizontal="true"
        android:text="@string/buildItBigger"
        android:background="@color/udacityOrange"
        android:layout_margin="@dimen/marginButtons"
        />
    <Button android:id="@+id/btnXyzReader"
        android:layout_width="@dimen/btnWidth"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnBuildItBigger"
        android:layout_centerHorizontal="true"
        android:text="@string/xyzReader"
        android:background="@color/udacityOrange"
        android:layout_margin="@dimen/marginButtons"
        />
    <Button android:id="@+id/btnCapstone"
        android:layout_width="@dimen/btnWidth"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnXyzReader"
        android:layout_centerHorizontal="true"
        android:text="@string/capstone"
        android:background="@color/udacityOrange"
        android:layout_margin="@dimen/marginButtons"
        />

</RelativeLayout>
